[package]
name = "ws2812-hal-delay"
version = "0.1.0"
authors = [
    "David Sawatzke <david-sawatzke@users.noreply.github.com>",
    "Bart Massey <bart.massey@gmail.com>",
]
edition = "2021"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "embedded-hal delay-based driver for ws2812 leds"
documentation = "https://docs.rs/crate/ws2812-timer-delay"
license = "MIT OR Apache-2.0"
readme = "README.md"
# repository = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs"

[dependencies]
embedded-dma = "0.2.0"
smart-leds-trait = "0.3"

[dependencies.nrf52833-hal]
version = "0.18"
default-features = false

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]

[dev-dependencies]
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
microbit-v2 = "0.15.0"
cortex-m-rt = "0.7.3"
smart-leds = "0.4.0"
embedded-hal = "1.0.0"
